<resources>
    <string name="app_name">Rekeningrijden</string>
    <string name="hdRideYearTotal">Jaarrekening</string>
    <string name="hdRideOverview">Overzicht</string>
    <string name="hdRideSearch">Zoeken</string>
    <string name="hdRide">Ritten</string>
    <string name="tvLoginName">Naam</string>
    <string name="tvLoginPassword">Wachtwoord</string>
    <string name="tvRegistrationHeader">Account aanmaken</string>
    <string name="tvRegistrationName">Naam</string>
    <string name="tvRegistrationUsername">Gebruikersnaam</string>
    <string name="tvRegistrationPassword">Wachtwoord</string>
    <string name="tvRegistrationZipcode">Postcode</string>
    <string name="tvRegistrationPhonenumber">Telefoonnummer</string>
    <string name="tvRegistrationHomenumber">Huisnummer</string>
    <string name="btnRegistrationRegister">Bevestigen</string>
    <string name="btnDriverStart">Starten</string>
    <string name="btnDriverStop">Stoppen</string>
    <string name="menuOverview">Overzicht</string>
    <string name="menuLogout">Uitloggen</string>
    <string name="menuAccount">Account</string>
    <string name="menuCar">Auto</string>
    <string name="tvRideOverviewRide">Rit</string>
    <string name="dash">-</string>

    <string name="tvRideYearTotalPrice">Kosten</string>
    <string name="tvRideYearTotalDate">Datum</string>
    <string name="btnCarNew">Nieuw</string>
    <string name="tvCarColor">Kleur</string>
    <string name="tvCarBrand">Merk</string>
    <string name="tvCarNumberplate">Kenteken</string>
    <string name="tvCarType">Type</string>
    <string name="btnCarUpdate">Bevestigen</string>
    <string name="btnLogin">Login</string>
    <string name="btnLoginRegistration">Registreren</string>
    <string name="hdChargeDefault">Standaard Heffing</string>
    <string name="hdChargeTime">Spits Heffing</string>
    <string name="hdChargeLocation">Locatie Heffing</string>
    <string name="tvSearchDate">Datum</string>
    <string name="tvSearchMinPrice">Minimale prijs</string>
    <string name="tvSearchMaxPrice">Maximale prijs</string>
    <string name="tvSearchStartLocation">Vertrekpunt</string>
    <string name="tvSearchStopLocation">Eindpunt</string>
    <string name="btnSearch">Zoeken</string>
    <string name="coordinateSplitCharacter">;</string>
    <string name="tvRideDetails">Rit</string>
    <string name="tvRideStartLocation">Vertreklocatie</string>
    <string name="tvRideStopLocation">Aankomstlocatie</string>
    <string name="tvRideStartTime">Vertrektijd</string>
    <string name="tvRideStopTime">Aankomsttijd</string>
    <string name="tvRideDate">Datum</string>
    <string name="tvRideTimeCharge">Toegepast spitstarief</string>
    <string name="tvRideLocationCharge">LocationCharge</string>
    <string name="tvRideDistance">Aantal kilometer</string>
    <string name="tvRideCost">Kosten</string>
    <string name="tvCoordinate">Coordinaat</string>
    <string name="tvName">Naam</string>
    <string name="tvChargeCoordinate">Coordinaat</string>
    <string name="Prijs">tvChargePrice</string>
    <string name="tvChargePrice">Prijs</string>
    <string name="btnChargeUpdate">Bevestigen</string>
    <string name="btnChargeDelete">Verwijderen</string>
    <string name="tvChargePrimary">Bijzonderheid</string>
    <string name="menuChargeNew">Nieuw</string>
    <string name="tvLogo">Schoolproject</string>

    <item name="reservedFrameLayoutId1" type="id"/>
    <item name="reservedFrameLayoutId2" type="id"/>
</resources>
