<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">
    <item
        android:id="@+id/menuChargeNew"
        android:orderInCategory="100"
        android:title="@string/menuChargeNew"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuOverview"
        android:orderInCategory="100"
        android:title="@string/menuOverview"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuAccount"
        android:orderInCategory="100"
        android:title="@string/menuAccount"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuCar"
        android:orderInCategory="100"
        android:title="@string/menuCar"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuLogout"
        android:orderInCategory="100"
        android:title="@string/menuLogout"
        app:showAsAction="never" />
</menu>