<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvCarColor"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/tvCarColor"
        app:layout_constraintBottom_toBottomOf="@+id/spinner6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinner6" />

    <TextView
        android:id="@+id/tvCarBrand"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/tvCarBrand"
        app:layout_constraintBottom_toBottomOf="@+id/spCarBrand"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spCarBrand" />

    <include
        android:id="@+id/tbRideRegistration"
        layout="@layout/include_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <Spinner
        android:id="@+id/spCarSearchNumberplate"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbRideRegistration" />

    <Button
        android:id="@+id/btnCarNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/raisedButton"
        android:layout_marginTop="35dp"
        android:text="@string/btnCarNew"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spCarSearchNumberplate"
        app:layout_constraintTop_toBottomOf="@+id/tbRideRegistration" />

    <TextView
        android:id="@+id/tvCarNumberplate"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/tvCarNumberplate"
        app:layout_constraintBottom_toBottomOf="@+id/etCarNumberplate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etCarNumberplate" />

    <TextView
        android:id="@+id/tvCarType"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/tvCarType"
        app:layout_constraintBottom_toBottomOf="@+id/spCarType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spCarType" />

    <EditText
        android:id="@+id/etCarNumberplate"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvCarNumberplate"
        app:layout_constraintTop_toBottomOf="@+id/tbRideRegistration" />

    <Spinner
        android:id="@+id/spCarBrand"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvCarBrand"
        app:layout_constraintTop_toBottomOf="@+id/etCarNumberplate" />

    <Spinner
        android:id="@+id/spCarType"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvCarType"
        app:layout_constraintTop_toBottomOf="@+id/spinner6" />

    <Spinner
        android:id="@+id/spinner6"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvCarColor"
        app:layout_constraintTop_toBottomOf="@+id/spCarBrand" />

    <Button
        android:id="@+id/btnCarUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/flatButton"
        android:layout_marginTop="32dp"
        android:text="@string/btnCarUpdate"
        app:layout_constraintEnd_toEndOf="@+id/spCarType"
        app:layout_constraintTop_toBottomOf="@+id/spCarType" />


</androidx.constraintlayout.widget.ConstraintLayout>